fixed li overflow

--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 80vw;
 }
 
 .navbar ul {
@@ -52,6 +53,7 @@ body {
     .navbar ul li {
         font-size: 15px;
         padding: 10px 10px 10px 10px;
+        font-size: 15px;
     }
 }
 
@@ -123,14 +125,24 @@ input:focus {
     outline: none;
 }
 
+@media (max-width: 480px) {
+    #distractionInput {
+        width: 180px;
+        font-size: 18px;
+    }
+}
+
 #distractionContainer {
+    align-self: flex-start;
     margin-top: 20px;
     margin-bottom: 20px;
+    max-width: 80vw;
 }
 
 #distractionContainer li {
     font-size: 18px;
     user-select: none;
+    word-wrap: break-word;
 }
 
 #distractionContainer li:hover {
@@ -155,6 +167,7 @@ input:focus {
     #timeSpent {
         align-self: center;
         margin-top: 100px;
+        font-size: px;
     }
 }
 
@@ -168,4 +181,10 @@ input:focus {
 
 #inputBtn:hover {
     cursor: pointer;
+}
+
+@media (max-width: 480px) {
+    #inputBtn {
+        padding: 10px;
+    }
 }
